--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "discordbot",
   "version": "1.0.0",
   "description": "learningDiscordjs",
-  "main": "bot/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch bot/index",
+    "start": "nodemon --watch index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
