--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
+    "ffmpeg": "0.0.4",
     "mz": "^2.7.0",
-    "nodemon": "^1.17.2"
+    "nodemon": "^1.17.2",
+    "opusscript": "0.0.6",
+    "ytdl-core": "^0.20.2"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
