--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "rules": {
     "semi": [ 2, "never"],
     "camelcase": [ 0, "always" ],
-    "consistent-return": [ 1, "always" ],
+    "consistent-return": 1,
     "comma-dangle": [ 1, "never" ]
   }
 }
