--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "discord.js": "^11.3.2",
     "ffmpeg": "0.0.4",
+    "gfycat-sdk": "^1.4.13",
     "googleapis": "^28.0.1",
     "mz": "^2.7.0",
     "nodemon": "^1.17.2",
