--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.3.2",
-    "fast-html-parser": "^1.0.1",
     "ffmpeg": "0.0.4",
     "gfycat-sdk": "^1.4.13",
     "googleapis": "^28.0.1",
@@ -30,6 +29,7 @@
     "nightmare": "^3.0.1",
     "nodemon": "^1.17.2",
     "opusscript": "0.0.6",
+    "rimraf": "^2.6.2",
     "ytdl-core": "^0.20.2"
   },
   "devDependencies": {
