--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,6 @@
     "camelcase": [ 0, "always" ],
     "consistent-return": 1,
     "comma-dangle": [ 1, "never" ],
-    "no-use-before-define": [ 1, "always" ]
+    "no-use-before-define": [ 1, { "functions": true, "classes": true } ]
   }
 }
